# Pancake-Web-Template

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
pancake_web_template/: __init__.py  template.py
