[tool.poetry]
name = "pancake-web-template"
version = "0.1.1"
description = "Pancake 模板渲染插件 — Jinja2 模板引擎，为 pancake-web 提供 HTML 页面渲染"
authors = ["drayee <1473443474@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pancake_web_template"}]

[tool.poetry.dependencies]
python = "^3.10"
pancake_framework = ">=0.2.0"
pancake-web = ">=0.1.0"
jinja2 = "^3.1.0"

[tool.poetry.plugins."pancake.plugins"]
web_template = "pancake_web_template:Main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
